--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
-    "react-parallax-tilt": "^1.7.247"
+    "react-parallax-tilt": "^1.7.247",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
