--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
     "react-parallax-tilt": "^1.7.247",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
