--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "autoprefixer": "^10.4.20",
     "next": "14.2.15",
+    "postcss-cli": "^11.0.0",
+    "postcss-scss": "^4.0.9",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
@@ -18,6 +21,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-parallax-tilt": "^1.7.247",
     "react-scroll": "^1.9.0",
+    "sass": "^1.81.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
@@ -28,8 +32,8 @@
     "@types/react-scroll": "^1.8.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5"
   }
 }
